# gnl

./: CMakeLists.txt  Makefile  Terminal Saved Output  file1  file2  get_next_line.c  get_next_line.h  get_next_line.h~  gnl  main.c  point.c  point.c~  test
libft/: ft_strjoin.c
